# NeuroBoost

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.h  resource.h
.github/workflows/: build.yml  release.yml
_codeql_build_dir/: CTestTestfile.cmake
build_test/: CTestTestfile.cmake
build_test/Testing/Temporary/: CTestCostData.txt
docs/: AGENTS.md  ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  LESSONS_LEARNED.md  MARKET_ANALYSIS.md  STATUS.md  UI_UX_SPEC.md
scripts/: build.bat  build.sh  setup_deps.bat  setup_deps.sh
src/: NeuroBoost.cpp  NeuroBoost.h  NeuroBoostDSP.cpp  NeuroBoostDSP.h
src/common/: Constants.h  MidiExport.cpp  MidiExport.h  Presets.h  Types.h
src/dsp/: Algorithms.cpp  Algorithms.h  LockFreeQueue.h  NoteTracker.h  ParamSmoother.h  ScaleQuantizer.h  SequencerEngine.cpp  SequencerEngine.h  TransportSync.h
src/ui/: EditorView.cpp  EditorView.h
src/ui/components/: ModeSelector.cpp  ModeSelector.h  ParameterKnob.cpp  ParameterKnob.h  PresetBrowser.cpp  PresetBrowser.h  StepCell.cpp  StepCell.h  StepGrid.cpp  StepGrid.h  TransportBar.cpp  TransportBar.h
src/ui/theme/: Theme.h
tests/: test_sequencer.cpp  test_ui_structure.cpp
tests/screenshots/reference/: ui_structure_reference.txt
